kubernetes/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: semicolon-backend-app
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: semicolon-backend
      type: backend
  template:
    metadata:
      labels:
        app: semicolon-backend
        type: backend
    spec:
      containers:
      - name: semicolon-backend
        image: nightknighto/semicolon-backend:v1-prod
        command: ["npm", "run", "deploy-linux"]
        ports:
        - containerPort: 3000
