kubernetes/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: semicolon-backend-app-svc
spec:
  type: LoadBalancer
  selector:
    app: semicolon-backend
    type: backend
  ports:
  - port: 80
    targetPort: 3000
